# passbolt-cli

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  check-key-uid.py  check-server-keys.py  config.ini.example  debug-auth.py  install.sh  passbolt-check.py  passbolt-cli.py  prompt.txt  pyproject.toml  requirements.txt
completions/: passbolt.bash
passbolt/: __init__.py  __main__.py  api_response.py  argv.py  auth.py  cli.py  client.py  clipboard.py  commands.py  config.py  gpg.py  gpg_util.py  http.py  metadata.py  resources.py  secret.py  theme.py  tui.py
tests/: test_api_response.py  test_cli_parser.py  test_client.py  test_clipboard.py  test_config.py  test_gpg.py  test_metadata.py  test_resources.py  test_secret.py
