[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passbolt-cli"
version = "0.1.0"
description = "Command-line interface for Passbolt password manager"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Emiel Kollof", email = "emiel.kollof@connectionsystems.nl"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "python-gnupg>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ekollof/passbolt-cli"
Repository = "https://github.com/ekollof/passbolt-cli"
Issues = "https://github.com/ekollof/passbolt-cli/issues"

[project.scripts]
passbolt = "passbolt.cli:main"

[tool.setuptools]
packages = ["passbolt"]

[tool.setuptools.package-data]
passbolt = ["py.typed"]
